--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,8 @@ os_info = { version = "3.8.2", default-features = false }
 bm25 = { version = "2.0.1", features = ["parallelism"] }
 which = "7.0.1"
 fuzzy-matcher = "0.3.7"
+regex = "1"
+once_cell = "1"
 
 [dependencies.reqwest]
 version = "0.12.0"
