--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ which = "7.0.1"
 fuzzy-matcher = "0.3.7"
 regex = "1"
 once_cell = "1"
+futures = "0.3.31"
 
 [dependencies.reqwest]
 version = "0.12.0"
