--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = "1.0.69"
 bytes = "1.4.0"
 clap = { version = "4.4.8", features = ["derive"] }
 dirs = "6.0.0"
+futures = "0.3.29"
 futures-util = "0.3.29"
 inquire = "0.7.0"
 is-terminal = "0.4.9"
@@ -68,7 +69,7 @@ which = "7.0.1"
 fuzzy-matcher = "0.3.7"
 regex = "1"
 once_cell = "1"
-futures = "0.3.31"
+rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["client", "server", "transport-child-process", "transport-sse"] }
 
 [dependencies.reqwest]
 version = "0.12.0"
